Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "tre"
+    "tree = ET.parse('nyc_2001_campaign_finance.')"
    ]
   },
   {
