Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,12 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "tree = ET.parse('nyc_2001_campaign_finance.')"
+    "tree = ET.parse('nyc_2001_campaign_finance.xml')\n",
+    "root = tree.getroot()"
    ]
   },
   {
