Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Answer: 1"
+    "#Answer: 1\n",
+    "count = 0\n",
+    "for chi"
    ]
   },
   {
