Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -70,13 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "#Answer: 1\n",
     "count = 0\n",
-    "for chi"
+    "for child in root:\n",
+    "    count += 1\n",
+    "print(count)"
    ]
   },
   {
