Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,9 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "tags = []"
+    "tags = []\n",
+    "for element in root.iter():\n",
+    "    tags.append(elem)"
    ]
   },
   {
