Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -98,23 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
     "tags = []\n",
     "for element in root.iter():\n",
-    "    tags.append(element.tag)\n",
-    "print(len(set(tags)))"
+    "    tags.append(elem)"
    ]
   },
   {
