--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,10 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n",
-    "tags = {}\n",
-    "for element in root.iter():\n",
-    "    t"
+    "#Your code here"
    ]
   },
   {
