--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,7 @@
     "#Your code here\n",
     "tags = {}\n",
     "for element in root.iter():\n",
-    "    t"
+    "    tags[element.tag] = tags.get(element.get, 0)"
    ]
   },
   {
