Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,9 @@
     "#Your code here\n",
     "tags = {}\n",
     "for element in root.iter():\n",
-    "    tags[element.tag] = tags.get(element.get, 0)"
+    "    tags[element.tag] = tags.get(element.get, 0) +1\n",
+    "df = pd.DataFrame.from_dict(tags, orient = 'index')\n",
+    "df.columns = ['count']\n"
    ]
   },
   {
