Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -146,7 +146,9 @@
     "for element in root.iter():\n",
     "    tags[element.tag] = tags.get(element.get, 0) +1\n",
     "df = pd.DataFrame.from_dict(tags, orient = 'index')\n",
-    "df.columns = ['count']\n"
+    "df.columns = ['count']\n",
+    "df = df.sort_values(by = 'count', ascending = False)\n",
+    "df.head"
    ]
   },
   {
