--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -166,39 +166,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>response</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>row</th>\n",
-       "      <td>1</td>\n",
+       "      <td>286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>candid</th>\n",
-       "      <td>1</td>\n",
+       "      <td>285</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>candname</th>\n",
-       "      <td>1</td>\n",
+       "      <td>285</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>officeboro</th>\n",
-       "      <td>1</td>\n",
+       "      <th>canclass</th>\n",
+       "      <td>285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>election</th>\n",
+       "      <td>284</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            count\n",
-       "response        1\n",
-       "row             1\n",
-       "candid          1\n",
-       "candname        1\n",
-       "officeboro      1"
+       "          count\n",
+       "row         286\n",
+       "candid      285\n",
+       "candname    285\n",
+       "canclass    285\n",
+       "election    284"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
     "#Your code here\n",
     "tags = {}\n",
     "for element in root.iter():\n",
-    "    tags[element.tag] = tags.get(element.get, 0) + 1\n",
+    "    tags[element.tag] = tags.get(element.tag, 0) + 1\n",
     "df = pd.DataFrame.from_dict(tags, orient='index')\n",
     "df.columns = ['count']\n",
     "df = df.sort_values(by = 'count', ascending = False)\n",
