Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "import json\n",
+    "f = open('ny')"
    ]
   },
   {
