Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,12 +230,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "f = open('ny')"
+    "f = open('nyc_2001_campaign_finance.json')\n",
+    "data = json.load(f)"
    ]
   },
   {
@@ -251,7 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Your code here"
+    "### Your code here\n",
+    "type(data)"
    ]
   },
   {
