--- a/index.ipynb
+++ b/index.ipynb
@@ -735,7 +735,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "df = pd.DataFrame(data['data'])\n",
+    "cols = [i]"
    ]
   },
   {
