--- a/index.ipynb
+++ b/index.ipynb
@@ -737,7 +737,9 @@
    "source": [
     "#Your code here\n",
     "df = pd.DataFrame(data['data'])\n",
-    "cols = [i]"
+    "cols = [i['name'] for i in data['meta']['view']['columns']]\n",
+    "df.columns = cols\n",
+    "df.head()"
    ]
   },
   {
